refactor(member, auth): 회원 관리 도메인 구조화 및 가독성·유지보수성 개선
- RetryConstants 클래스 추출: 낙관적 락 예외 및 재시도 설정 상수 외부화
- JavaDoc 주석 추가: MemberService, AuthService 주요 메서드 문서화
- 프로필 이미지 처리 로직 분리: processProfileImageUpdate, confirmNewProfileImage, unUseProfileImage 메서드로 책임 분리
- 회원 조회 유틸 메서드 도입: findMemberById, findMemberByUsername (operation 컨텍스트 로깅 및 예외 처리)
- OAuth2 회원 생성 로직 분리: createMemberFromOAuth2 메서드 추가
- 인증 정보 및 토큰 무효화 로직 분리: invalidateAllAuthentications, invalidateAllTokens 메서드 도입
- 메서드명 및 조건문 구조 개선으로 가독성 향상